Подогнала под PP

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,10 +4,6 @@
   width: 100%;
 
   background-color: #ffffff;
-
-  &--inner {
-    padding-top: 38px;
-  }
 }
 
 .page-main__lead {
@@ -29,11 +25,16 @@
 
   .page-main__lead {
     margin-bottom: 0;
+    padding-bottom: 55px;
 
     &--testimonial {
-      padding-top: 60px;
-      padding-bottom: 50px;
+      padding-top: 70px;
+      padding-bottom: 55px;
     }
+  }
+
+  .page-main__video {
+    padding-bottom: 40px;
   }
 }
 
@@ -50,7 +51,15 @@
     }
   }
 
-  .page-main__lead--testimonial {
-    padding-bottom: 40px;
+  .page-main__lead {
+    padding-bottom: 57px;
+
+    &--testimonial {
+      padding-bottom: 40px;
+    }
+  }
+
+  .page-main__video {
+    padding-bottom: 84px;
   }
 }
