--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -13,7 +13,7 @@
 
 .advanteges__wrap {
   .mobile-center();
-  padding: 28px 20px;
+  padding: 28px 35px 27px;
 
   &::after {
     content: "";
@@ -31,7 +31,7 @@
 
 .advanteges__heading {
   .reset-indents();
-  margin-bottom: 7px;
+  margin-bottom: 8px;
 
   font-size: 18px;
   line-height: 26px;
@@ -44,6 +44,8 @@
   display: inline-block;
   .reset-indents();
   margin-bottom: 14px;
+
+  line-height: 21px;
 
   &::before {
     content: "";
@@ -78,6 +80,12 @@
   .reset-indents();
 
   line-height: 21px;
+
+  &--transform-desk {
+    br {
+      display: none;
+    }
+  }
 }
 
 .advanteges__item {
@@ -113,7 +121,7 @@
     background-color: @bg-blue;
 
     .advanteges__wrap {
-      padding: 38px 20px;
+      padding: 38px 20px 40px;
     }
 
     .advanteges__heading {
@@ -132,6 +140,12 @@
         padding-top: 57px;
       }
     }
+  }
+}
+
+.advanteges__heading--transform {
+  br {
+    display: none;
   }
 }
 
@@ -162,7 +176,13 @@
 
   .advanteges__heading {
     font-size: 21px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
+  }
+
+  .advanteges__heading--transform {
+    br {
+      display: block;
+    }
   }
 
   .advanteges__text {
@@ -170,7 +190,7 @@
   }
 
   .advanteges__number {
-    margin-bottom: 18px;
+    margin-bottom: 21px;
   }
 
   .advanteges__item:first-of-type::before {
@@ -230,7 +250,7 @@
     align-items: center;
 
     width: 400px;
-    padding-bottom: 64px;
+    padding-bottom: 66px;
   }
 
   .advanteges__photo-wrap {
@@ -246,10 +266,17 @@
 
   .advanteges__heading {
     width: 165px;
+    margin-bottom: 10px;
   }
 
   .advanteges__text {
-    width: 310px;
+    width: 270px;
+
+    &--transform-desk {
+      br {
+        display: block;
+      }
+    }
   }
 
   .advanteges__item--photo {
