--- a/source/less/blocks/like-btn.less
+++ b/source/less/blocks/like-btn.less
@@ -22,22 +22,24 @@
   vertical-align: baseline;
   width: 23px;
   height: 21px;
-  margin-right: 15px;
+  margin-right: 12px;
 
   fill: #b2b2b2;
 }
 
+.like-btn__counter {
+  display: inline-block;
+  vertical-align: baseline;
+  width: 34px;
+}
+
 @media (min-width: @tablet-width) {
   .like-btn__icon {
-    margin-right: 10px;
+    margin-right: 6px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .like-btn {
-    z-index: 3;
-  }
-
   .like-btn__counter {
     color: @heading-white;
   }
