--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -49,7 +49,7 @@
     }
 
     &--main {
-      padding: 78px 0 90px;
+      padding: 78px 0 82px;
 
       .page-header__slogan {
         margin: 0 auto;
@@ -59,9 +59,10 @@
     }
 
     &--page {
-      padding: 95px 0 117px;
+      padding: 95px 0 115px;
 
       .page-header__slogan {
+        display: block;
         margin: 0 auto;
         width: 458px;
         height: 78px;
