--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -21,7 +21,11 @@
   }
 
   &--page {
-    padding: 52px 0 57px;
+    padding: 51px 0 59px;
+
+    background-size: 768px 389px;
+    background-position: center bottom;
+
   }
 
   &::after {
@@ -59,13 +63,15 @@
     }
 
     &--page {
-      padding: 95px 0 115px;
+      padding: 94px 0 114px;
+
+      background-size: 768px 518px;
 
       .page-header__slogan {
         display: block;
         margin: 0 auto;
-        width: 458px;
-        height: 78px;
+        width: 460px;
+        height: 80px;
       }
     }
 
@@ -99,6 +105,8 @@
 
   .page-header__banner--page {
     padding: 101px 0 120px;
+
+    background-size: 1200px 518px;
 
     .page-header__slogan {
       width: 461px;
