--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,6 +4,10 @@
   width: 100%;
 
   background-color: #ffffff;
+
+  &--index {
+    padding-top: 40px;
+  }
 }
 
 .page-main__lead {
@@ -12,6 +16,11 @@
 
 .page-main__lead--testimonial {
   margin-bottom: 16px;
+}
+
+.page-main__lead--photo {
+  padding-left: 23px;
+  padding-right: 23px;
 }
 
 @media (min-width: @tablet-width) {
@@ -30,6 +39,12 @@
     &--testimonial {
       padding-top: 70px;
       padding-bottom: 55px;
+    }
+
+    &--photo {
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 68px;
     }
   }
 
@@ -55,7 +70,13 @@
     padding-bottom: 57px;
 
     &--testimonial {
-      padding-bottom: 40px;
+      padding-bottom: 41px;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    &--photo {
+      padding-bottom: 72px;
     }
   }
 
