--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -12,6 +12,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .video {
+    padding-top: 31px;
+  }
+
   .video__item {
     .tablet-center();
     padding: 0 60px;
@@ -25,6 +29,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .video {
+    padding-top: 33px;
+  }
+
   .video__item {
     width: auto;
     padding: 0;
@@ -32,5 +40,6 @@
 
   .video__lead {
     padding-top: 30px;
+    padding-bottom: 72px;
   }
 }
