--- a/source/less/blocks/like-btn.less
+++ b/source/less/blocks/like-btn.less
@@ -1,4 +1,6 @@
 .like-btn {
+  display: flex;
+  align-items: center;
   font-weight: bold;
   color: @heading-dark;
 
@@ -18,24 +20,23 @@
 }
 
 .like-btn__icon {
-  display: inline-block;
-  vertical-align: baseline;
   width: 23px;
   height: 21px;
-  margin-right: 12px;
+  margin-right: 11px;
 
   fill: #b2b2b2;
 }
 
 .like-btn__counter {
-  display: inline-block;
-  vertical-align: baseline;
-  width: 34px;
+  width: 33px;
+  padding-top: 6px;
+
+  line-height: 14px;
 }
 
 @media (min-width: @tablet-width) {
   .like-btn__icon {
-    margin-right: 6px;
+    margin-right: 8px;
   }
 }
 
