--- a/source/less/blocks/testimonial-form.less
+++ b/source/less/blocks/testimonial-form.less
@@ -34,6 +34,7 @@
   textarea {
     width: 100%;
     height: auto;
+    padding-top: 12px;
   }
 }
 
@@ -162,7 +163,6 @@
 .testimonial-form__label--radio,
 .testimonial-form__label--checkbox {
   padding: 15px 0 15px 80px;
-  margin-bottom: 14px;
 
   font-weight: bold;
   font-size: 18px;
@@ -173,11 +173,13 @@
   cursor: pointer;
 
   &:last-of-type {
-    margin-bottom: 25px;
+    margin-bottom: 28px;
   }
 }
 
 .testimonial-form__label--radio {
+  margin-bottom: 13px;
+
   &::before {
     content: "";
 
@@ -225,7 +227,7 @@
 }
 
 .testimonial-form__label--checkbox {
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 
   &::before {
     content: "";
@@ -259,8 +261,8 @@
   content: "";
 
   position: absolute;
-  top: 18px;
-  left: 18px;
+  top: 19px;
+  left: 16px;
 
   width: 24px;
   height: 17px;
@@ -275,12 +277,12 @@
 
 .testimonial-form__label--textarea {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
 }
 
 .testimonial-form__btn-wrap {
-  margin-top: 50px;
-  margin-bottom: 40px;
+  margin-top: 52px;
+  margin-bottom: 38px;
 }
 
 .testimonial-form__legend--checkbox {
@@ -585,8 +587,27 @@
     }
   }
 
+  .testimonial-form__legend--name {
+    margin-bottom: 58px;
+  }
+
   .testimonial-form__legend--radio {
+    margin-bottom: 58px;
     padding-left: 80px;
+  }
+
+  .testimonial-form__label--radio {
+    margin-bottom: 22px;
+
+    &::before {
+      top: 0;
+      left: 5px;
+    }
+  }
+
+  .testimonial-form__input--radio:checked + .testimonial-form__label--radio::after {
+    top: 18px;
+    left: 23px;
   }
 
   .testimonial-form__group--checkbox {
@@ -609,7 +630,7 @@
   }
 
   .testimonial-form__label--contacts {
-    margin-right: 20px;
+    margin-right: 18px;
     padding-left: 0;
 
     &:nth-of-type(even) {
@@ -618,7 +639,7 @@
   }
 
   .testimonial-form__input--contacts {
-    width: 320px;
+    width: 315px;
   }
 
   .testimonial-form__desk-hidden {
@@ -645,14 +666,10 @@
 
   .testimonial-form__label--checkbox {
     width: auto;
-
-    &:not(:nth-of-type(4)) {
-      margin-right: 40px;
-    }
   }
 
   .testimonial-form__label--textarea {
-    margin-top: 15px;
+    margin-top: 14px;
 
     &::before,
     &::after {
