--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -206,6 +206,7 @@
   .advanteges__item--photo {
     display: flex;
     flex-shrink: 0;
+    align-items: center;
 
     &:nth-child(even) {
       .advanteges__wrap {
