--- a/source/less/blocks/advanteges.less
+++ b/source/less/blocks/advanteges.less
@@ -171,7 +171,8 @@
 
   .advanteges__lead {
     width: 768px;
-    padding-bottom: 52px;
+    padding-top: 30px;
+    padding-bottom: 50px;
   }
 
   .advanteges__heading {
@@ -190,7 +191,7 @@
   }
 
   .advanteges__number {
-    margin-bottom: 21px;
+    margin-bottom: 23px;
   }
 
   .advanteges__item:first-of-type::before {
@@ -206,7 +207,6 @@
   .advanteges__item--photo {
     display: flex;
     flex-shrink: 0;
-    align-items: center;
 
     &:nth-child(even) {
       .advanteges__wrap {
@@ -272,6 +272,10 @@
   .advanteges__heading {
     width: 165px;
     margin-bottom: 10px;
+  }
+
+  .advanteges__number {
+    margin-bottom: 21px;
   }
 
   .advanteges__text {
