--- a/source/less/blocks/booking.less
+++ b/source/less/blocks/booking.less
@@ -20,7 +20,7 @@
 @media (min-width: @tablet-width) {
   .booking {
     margin: 0 auto;
-    padding: 55px 0;
+    padding: 54px 0 56px;
     width: 458px;
   }
 
@@ -39,7 +39,7 @@
 
 @media (min-width: @desktop-width) {
   .booking {
-    padding-bottom: 65px;
+    padding-bottom: 66px;
   }
 
   .booking__lead {
